syntax = "proto3";

package search.v1;

import "google/protobuf/struct.proto";

option go_package = "github.com/takumi-1234/searchService/gen/search/v1;searchv1";

// SearchService provides an interface for searching documents.
service SearchService {
  // SearchDocuments performs a search against a specified index.
  rpc SearchDocuments(SearchDocumentsRequest) returns (SearchDocumentsResponse);
}

// SearchDocumentsRequest is the request for the SearchDocuments RPC.
message SearchDocumentsRequest {
  string index_name = 1;
  string query_text = 2;
}

// SearchDocumentsResponse is the response for the SearchDocuments RPC.
message SearchDocumentsResponse {
  repeated SearchResult results = 1;
  int64 total_count = 2;
}

// SearchResult represents a single document found in the search.
message SearchResult {
  string document_id = 1;
  float score = 2;
  google.protobuf.Struct fields = 3;
}